fix orders image overlap

--- a/styles/cart.css
+++ b/styles/cart.css
@@ -50,6 +50,7 @@ body
 div
 {
 	display: block;
+	position: relative;
 	-webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -1601,4 +1602,9 @@ section
 
 .sale_price del {
 	color: #b3b3b3;
+}
+
+.product_image_img {
+	max-width: 100%;
+	max-height: 100%;
 }
